--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "keywords": [],
   "description": "",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
+    "mongoose": "^7.1.0",
     "nodemodule": "^0.3.0",
     "nodemon": "^2.0.22",
     "router": "^1.3.8",
